Project

General

Profile

Actions

Bug #13422

closed

pid file that was deleted after ceph restart leads to osd process lose control

Added by shun song over 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
hammer,infernalis
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when restarting ceph, the same osd will start twice. the first time is regular start;the other is activated by ceph-disk activated all. if the second startup starts fast enough before the pid file created. Unluckly, only one process can get fsid_lock and live through. then the lose process will delete the pid file when exiting. As a result, this osd may stop unregularlly when using 'service ceph stop osd.{id}'.

resovled method:
locking pid file using file lock


Related issues 4 (0 open4 closed)

Has duplicate Ceph - Bug #13238: duplicate start of ceph-osd daemonDuplicateKefu Chai09/25/2015

Actions
Has duplicate Ceph - Bug #14575: daemons leave pid files behind in /home/ubuntu/cephtestDuplicateLoïc Dachary01/30/2016

Actions
Copied to Ceph - Backport #14582: infernalis: pid file that was deleted after ceph restart leads to osd process lose control RejectedLoïc DacharyActions
Copied to Ceph - Backport #14583: hammer: pid file that was deleted after ceph restart leads to osd process lose control ResolvedKefu ChaiActions
Actions #1

Updated by huang jun over 8 years ago

Actions #2

Updated by shun song over 8 years ago

how about not to remove pid-file,when process exits, becuase the pid-file is important for juding whether osd/mon is running. at the same time, to avoid compelling to write the pid-file when multiple times start up one osd or monitor, lock is recommanded.

Actions #4

Updated by Nathan Cutler over 8 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Kefu Chai over 8 years ago

  • Has duplicate Bug #13238: duplicate start of ceph-osd daemon added
Actions #7

Updated by Loïc Dachary over 8 years ago

  • Backport set to hammer,infernalis
Actions #8

Updated by Shinobu Kinjo over 8 years ago

Will patch be (able to be) backported to 0.80.8?

Actions #9

Updated by Kefu Chai about 8 years ago

Will patch be (able to be) backported to 0.80.8?

@Shinobu 0.80.8 is a firefly release, and since firefly is retired, see http://docs.ceph.com/docs/master/releases/ , we are not going to backport to this release.

and yes, it is able to be backported to 0.80.8, but this will not happen in the upstream.

Actions #10

Updated by Kefu Chai about 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #11

Updated by Kefu Chai about 8 years ago

  • Assignee set to Kefu Chai
Actions #12

Updated by Loïc Dachary about 8 years ago

  • Copied to Backport #14582: infernalis: pid file that was deleted after ceph restart leads to osd process lose control added
Actions #13

Updated by Loïc Dachary about 8 years ago

  • Copied to Backport #14583: hammer: pid file that was deleted after ceph restart leads to osd process lose control added
Actions #14

Updated by Loïc Dachary about 8 years ago

  • Status changed from Pending Backport to In Progress
  • Assignee changed from Kefu Chai to Loïc Dachary
Actions #15

Updated by Loïc Dachary about 8 years ago

  • Has duplicate Bug #14575: daemons leave pid files behind in /home/ubuntu/cephtest added
Actions #17

Updated by Kefu Chai about 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #18

Updated by Sage Weil about 8 years ago

  • Status changed from Fix Under Review to Resolved

woot!

Actions #19

Updated by Loïc Dachary about 8 years ago

  • Status changed from Resolved to Pending Backport
Actions #21

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF