global: do not start two daemons with a single pid-file (part 2)

* In theory atexit(pidfile_remove_void) is called before pidfh
  destructor. But valgrind probably changes this order. Move
  the call to pidfile_remove into the pidfh destructor instead,
  it is simpler.

* Move pidfile_open(g_conf) after close(STDOUT_FILENO) so that there
  is no risk that pidfile_open gets STDOUT_FILENO only to have it
  closed and redirected to /dev/null

* Before writing the file, ftruncate it so that overriding a file
  containing the pid 1234 with the pid 89 does not end up being
  a file with 8934.

* tests_pidfile was missing an argument when failing
  TEST_without_pidfile and killed all process with ceph in their name,
  leading to chaos and no useful error message

* cleanup the CEPH_MON port reminder in test_pidfile.sh

http://tracker.ceph.com/issues/13422 Fixes: #13422

Signed-off-by: Loic Dachary <loic@dachary.org>