src/global/global_init.cc
@@ -252,11 +252,6 @@ void global_print_banner(void)
   output_ceph_version();
 }
 
-static void pidfile_remove_void(void)
-{
-  pidfile_remove();
-}
-
 int global_init_prefork(CephContext *cct)
 {
   if (g_code_env != CODE_ENVIRONMENT_DAEMON)
@@ -267,11 +262,6 @@ int global_init_prefork(CephContext *cct)
 
     if (pidfile_open(g_conf) < 0) {
       exit(1);
-    }
-
-    if (atexit(pidfile_remove_void)) {
-      derr << "global_init_daemonize: failed to set pidfile_remove function "
-	   << "to run at exit." << dendl;
     }
     pidfile_write();
 
@@ -310,15 +300,6 @@ void global_init_postfork_start(CephContext *cct)
   // restart log thread
   g_ceph_context->_log->start();
 
-  if (pidfile_open(g_conf) < 0) {
-    exit(1);
-  }
-
-  if (atexit(pidfile_remove_void)) {
-    derr << "global_init_daemonize: failed to set pidfile_remove function "
-	 << "to run at exit." << dendl;
-  }
-
   /* This is the old trick where we make file descriptors 0, 1, and possibly 2
    * point to /dev/null.
    *
@@ -342,6 +323,9 @@ void global_init_postfork_start(CephContext *cct)
     exit(1);
   }
 
+  if (pidfile_open(g_conf) < 0) {
+    exit(1);
+  }
   pidfile_write();
 }
 
